# kayak_ui_experiments

./: Cargo.toml  LICENSE  README.md
examples/: clipping.rs  context.rs  image.rs  nine_patch.rs  quads.rs  scrolling.rs  simple.rs  simple_state.rs  text.rs  text_box.rs  texture_atlas.rs  vec.rs
examples/tabs/: tab.rs  tab_button.rs  tab_context.rs  tabs.rs
examples/todo/: todo.rs
kayak_font/: Cargo.toml
kayak_font/examples/: bevy.rs
kayak_font/examples/renderer/: extract.rs  mod.rs  pipeline.rs  shader.wgsl  text.rs
kayak_font/src/: atlas.rs  font.rs  glyph.rs  lib.rs  metrics.rs  sdf.rs
kayak_font/src/bevy/: font_texture.rs  loader.rs  mod.rs
kayak_font/src/bevy/renderer/: extract.rs  font_texture_cache.rs
kayak_font/src/layout/: glyph.rs  grapheme.rs  line.rs  text.rs
kayak_ui_macros/: Cargo.toml
kayak_ui_macros/examples/: test.rs
kayak_ui_macros/src/: attribute.rs  block.rs  child.rs  children.rs  lib.rs  widget.rs  widget_attributes.rs  widget_builder.rs
src/: calculate_nodes.rs  children.rs  context.rs  context_entities.rs  event.rs  event_dispatcher.rs  focus_tree.rs  input.rs  input_event.rs  keyboard_event.rs  layout.rs  lib.rs  main.rs  node.rs  on_change.rs  on_event.rs  render_primitive.rs  tree.rs  ui_system.rs  widget.rs  widget_context.rs  window_size.rs
src/camera/: camera.rs  ortho.rs
src/flo_binding/: binding.rs
src/render/: extract.rs  mod.rs
src/render/font/: extract.rs  font_mapping.rs  mod.rs
src/render/image/: extract.rs  mod.rs
src/render/nine_patch/: extract.rs
src/render/quad/: extract.rs
src/render/texture_atlas/: extract.rs
src/render/unified/: mod.rs  pipeline.rs
src/styles/: mod.rs  options_ref.rs  render_command.rs  style.rs
src/widgets/: app.rs  background.rs  button.rs  clip.rs  element.rs  image.rs  mod.rs  nine_patch.rs  text.rs  text_box.rs  texture_atlas.rs  window.rs
src/widgets/scroll/: scroll_bar.rs  scroll_box.rs  scroll_content.rs  scroll_context.rs
