[package]
name = "kayak_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="092bb71bcf00fa278b828df0115c144451233983" }
bytemuck = "1.12"
dashmap = "5.4"
kayak_font = { path = "./kayak_font" }
morphorm = { git = "https://github.com/geom3trik/morphorm", rev = "1243152d4cebea46fd3e5098df26402c73acae91" }

[dev-dependencies]
fastrand = "1.8"